[gd_scene load_steps=18 format=2]

[ext_resource path="res://Areas/FrontDoor/Sprites/front.png" type="Texture" id=1]
[ext_resource path="res://Areas/FrontDoor/Sprites/frontFence.png" type="Texture" id=2]
[ext_resource path="res://Areas/FrontDoor/Sprites/frontClosed.png" type="Texture" id=3]
[ext_resource path="res://Areas/FrontDoor/Sprites/frontOpen.png" type="Texture" id=4]
[ext_resource path="res://Grim/Grim.tscn" type="PackedScene" id=5]
[ext_resource path="res://Areas/FrontDoor/FrontDoor.gd" type="Script" id=6]
[ext_resource path="res://Areas/FrontDoor/DialogueManager1.tscn" type="PackedScene" id=7]
[ext_resource path="res://Areas/FrontDoor/DoorTrigger.gd" type="Script" id=8]
[ext_resource path="res://Grim/charactersWalk.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 79.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 208, 138 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 483, 138 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 57, 138 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 30.0
height = 60.0

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Walk"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 6, 8 ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 57, 10 )

[node name="FrontDoor" type="Node2D"]
script = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="BG" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Fence" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
z_index = 2
texture = ExtResource( 2 )

[node name="DoorClosed" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="DoorOpen" type="Sprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="GrimSpawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Grim" parent="." instance=ExtResource( 5 )]
position = Vector2( -4, 215 )
z_index = 1

[node name="DialogueManager1" parent="." instance=ExtResource( 7 )]

[node name="DoorTrigger" type="Area2D" parent="."]
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorTrigger"]
position = Vector2( 8, 102 )
shape = SubResource( 1 )

[node name="HouseBarrier1" type="StaticBody2D" parent="."]
position = Vector2( -265, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HouseBarrier1"]
shape = SubResource( 2 )

[node name="HouseBarrier3" type="StaticBody2D" parent="."]
position = Vector2( -611, 205 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HouseBarrier3"]
shape = SubResource( 2 )

[node name="HouseBarrier4" type="StaticBody2D" parent="."]
position = Vector2( 612, 223 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HouseBarrier4"]
shape = SubResource( 2 )

[node name="HouseBarrier5" type="StaticBody2D" parent="."]
position = Vector2( 3, 437 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HouseBarrier5"]
shape = SubResource( 12 )

[node name="HouseBarrier2" type="StaticBody2D" parent="."]
position = Vector2( 282, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HouseBarrier2"]
shape = SubResource( 2 )

[node name="HouseBarrierMiddle" type="StaticBody2D" parent="."]
position = Vector2( 7, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HouseBarrierMiddle"]
shape = SubResource( 10 )

[node name="Granny" type="KinematicBody2D" parent="."]
visible = false
position = Vector2( 24, 82 )

[node name="Sprite" type="Sprite" parent="Granny"]
position = Vector2( -10, -38 )
scale = Vector2( 4, 4 )
texture = ExtResource( 9 )
hframes = 6
vframes = 2
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Granny"]
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Granny"]
anims/RESET = SubResource( 7 )
anims/Walk = SubResource( 9 )

[node name="EnterHouseTrigger" type="Area2D" parent="."]
modulate = Color( 0, 1, 0.0156863, 1 )
position = Vector2( 8, 56 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterHouseTrigger"]
shape = SubResource( 11 )

[node name="Response1" type="Button" parent="."]
margin_left = 87.0
margin_top = -46.0
margin_right = 231.0
margin_bottom = -26.0
text = "Your time has come."

[node name="Response2" type="Button" parent="."]
margin_left = 88.0
margin_top = -15.0
margin_right = 232.0
margin_bottom = 5.0
text = "Yes. Are you ready?"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="GrimSpawnTimer" to="." method="show_grim"]
[connection signal="body_entered" from="DoorTrigger" to="DoorTrigger" method="_on_DoorTrigger_body_entered"]
[connection signal="body_exited" from="DoorTrigger" to="DoorTrigger" method="_on_DoorTrigger_body_exited"]
[connection signal="body_entered" from="EnterHouseTrigger" to="." method="_on_EnterHouseTrigger_body_entered"]
[connection signal="button_up" from="Response1" to="DialogueManager1" method="_on_Response1_button_up"]
[connection signal="button_up" from="Response2" to="DialogueManager1" method="_on_Response2_button_up"]
